@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Add opacity to legend (#3740)
+
 - Updated PHP/MapScript with the new objects properties (#3735)
 
 - KML: set layeer's projection when it is not defined (#3809)
